--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@ Bullets Bounce Of Walls And Of Your Sword, You Die In 5 Hits</div>
 <img src="portal.gif" alt="portal" id="portal3" />
 <img src="portal.gif" alt="portal" id="portal4" />
 
-<div id="highscore">HIGHSCORE: 0</div>
-<progress id="hp" value="100" min="0" max="100"></progress>
-<progress id="repulse" value="30" min="0" max="30"></progress>
-<div id="hpText">HEALTH</div>
-<div id="repulseText">REPULSE</div>
+<div id="highscore" draggable="false">HIGHSCORE: 0</div>
+<progress id="hp" value="100" min="0" max="100" draggable="false"></progress>
+<progress id="repulse" value="30" min="0" max="30" draggable="false"></progress>
+<div id="hpText" draggable="false">HEALTH</div>
+<div id="repulseText" draggable="false">REPULSE</div>
 
 <canvas id="canvas1"></canvas>
 <div id="sword"></div>
