--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Bullets Bounce Of Walls And Of Your Sword, You Die In 5 Hits</div>
 
 <div id="youLose">YOU LOSE!<br />Enemies Destroyed: <span id="enemiesDestroyed">0</span><br /><button id="tryAgain">Try Again</button></div>
 <footer>A Game Made By Maksymilian Nowak &copy;2021<br />
-Menu Music Made By Abstraction - Ludum Dare 38 Track 2<br />
+Background Theme Made By Abstraction - Ludum Dare 38 Track 2<br />
 Visit His Website! http://www.abstractionmusic.com/</footer>
 
 <script src="script.js"></script>
