Made Everything Look Better

--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@ Bullets Bounce Of Walls And Of Your Sword, You Die In 5 Hits</div>
 <canvas id="canvas1"></canvas>
 <div id="sword"></div>
 
-<div id="youLose">YOU LOSE!<br />Enemies Destroyed: <span id="enemiesDestroyed">0</span><br /><button id="tryAgain">Try Again</button></div>
+<div id="youLose"><span id="score"></span><br />Enemies Destroyed: <span id="enemiesDestroyed">0</span><br /><button id="tryAgain">Try Again</button></div>
 <footer>A Game Made By Maksymilian Nowak &copy;2021<br />
 Background Theme Made By Abstraction - Ludum Dare 38 Track 2<br />
-Visit His Website! http://www.abstractionmusic.com/</footer>
+Visit His Website! http://www.abstractionmusic.com/<br />
+Visit My GitHub For More Games! https://github.com/strategymasta/</footer>
 
 <script src="script.js"></script>
 
