Menu Rework And Custom Font

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ Bullets Bounce Of Walls And Of Your Sword, You Die In 5 Hits</div>
 
 <div id="menu">
     <div id="gameMenu">
-        PIXEL FIGHT 2<br />
-        <button id="play">PLAY</button>
+        Pixel Fight <span id="num">2</span><br />
+        <canvas id="play"></canvas>
     </div>
 </div>
 
@@ -27,11 +27,11 @@ Bullets Bounce Of Walls And Of Your Sword, You Die In 5 Hits</div>
 <img src="portal.gif" alt="portal" id="portal3" />
 <img src="portal.gif" alt="portal" id="portal4" />
 
-<div id="highscore" draggable="false">HIGHSCORE: 0</div>
+<div id="highscore" draggable="false">Highscore: 0</div>
 <progress id="hp" value="100" min="0" max="100" draggable="false"></progress>
 <progress id="repulse" value="30" min="0" max="30" draggable="false"></progress>
-<div id="hpText" draggable="false">HEALTH</div>
-<div id="repulseText" draggable="false">REPULSE</div>
+<div id="hpText" draggable="false">Health</div>
+<div id="repulseText" draggable="false">Repulse</div>
 
 <canvas id="canvas1"></canvas>
 <div id="sword"></div>
